@@ -1,4 +1,7 @@
 HEAD
+	+ Restart usercorner on installation / upgrade time so the new code is
+	  available there too
+	+ Fixed external mail retrieval configuration form from user corner
 	+ Fixed bug in LDAP synchronization of mail virtual domains
 3.4.1
 	+ Removed free access to dovecot from localhost, now we have a
